[project]
name = "fluid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kisanuki Shoichiro", email = "posaune.pri@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scipy>=1.17.1",
    "streamlit>=1.54.0",
]

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
